[tool.poetry]
name = "trip-planning-assistant"
version = "0.1.0"
description = ""
authors = ["Gabriel Machuca Cortés <gabriel.machuca@invokeinc.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
browserpilot = "=0.2.51"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
